# portal

./: Dockerfile  Dockerfile.txt  README.md  builder.sh  docker.sh  pyproject.toml  requirements.txt
smartvision/: app.py
smartvision/ai/common/: collision.py  cv.py  yolo.py
smartvision/ai/pet/: llm.py
smartvision/ai/prompts/: format_user_contents_1.txt  format_user_contents_2.txt
smartvision/common/: aliyun.py  loader.py  session.py  settings.py  utils.py
smartvision/ui/components/: common.py  content.py  sidebar.py
smartvision/ui/components/collision/: chat.py  info.py
smartvision/ui/components/pet/: chat.py  info.py
smartvision/ui/components/staff/: chat.py  info.py
smartvision/ui/static/css/: style.css
smartvision/ui/static/md/: loading_animation.md  upload_success.md
smartvision/ui/static/templates/: chat_message.html  upgrade_plan.html  welcome.html
